namespace SFunctionContinuous.Framework.Declarations
{
    public class StateDeclaration : Declaration
    {
        public StateDeclaration(string name) : base(name)
        {

        }
    }
}
