namespace SFunctionHybrid.Framework
{
    public abstract class SampleTime
    {

    }
}
