classDiagram

    direction LR

    class Block {
        <<Abstract>>
        Name : string
        BlocksBefore : List~Block~
        BlocksAfter : List~Block~
        ConnectionsIn : List~Connection~
        ConnectionsOut : List~Connection~
        ContinuousStates : List~StateDeclaration~
        DiscreteStates : List~StateDeclaration~
        Inputs : List~InputDeclaration~
        Outputs : List~OutputDeclaration~
        ZeroCrossings : List~ZeroCrossingDeclaration~
        SampleTime : SampleTime
        InitializeStates(...) void
        GetNextVariableHitTime(...) double
        CalculateOutputs(...) void
        CalculateDerivatives(...) void
        CalculateZeroCrossings(...) void
        UpdateStates(...) void
    }

    class StateDeclaration {
    }

    class InputDeclaration {
    }

    class OutputDeclaration {
    }

    class ZeroCrossingDeclaration {
    }
    
    class SampleTime {
        <<Abstract>>
    }

    Block *-- "*" StateDeclaration : ContinuousStates
    Block *-- "*" StateDeclaration : DiscreteStates
    Block *-- "*" InputDeclaration : Inputs
    Block *-- "*" OutputDeclaration : Outputs
    Block *-- "*" ZeroCrossingDeclaration : ZeroCrossings
    Block *-- "1" SampleTime : SampleTime

    style StateDeclaration fill:white
    style InputDeclaration fill:white
    style OutputDeclaration fill:white
    style ZeroCrossingDeclaration fill:white
    style SampleTime fill:white